<resources>
    <string name="app_name">AlorineBlogApp</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="or">OR</string>
    <string name="username">Username</string>
    <string name="phone_number">Phone Number</string>
    <string name="create_account">Create Account</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="post">POST</string>
    <string name="add_blog">Add Blog</string>
    <string name="sign_out">Sign Out</string>
    <string name="categories_str">Select Categories</string>
    <string name="search">Search</string>

    <string-array name="categories">
        <item>Finance</item>
        <item>Diet</item>
        <item>Skincare</item>
        <item>Society</item>
        <item>Fitness</item>
        <item>Relationship</item>
        <item>Travel</item>
        <item>DIY</item>
        <item>Inspiration</item>
        <item>Food</item>
        <item>Humour</item>
        <item>Political</item>
        <item>Psychology</item>
        <item>Leadership</item>
        <item>Marketing</item>

    </string-array>
</resources>
